<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ServiceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:backgroundTint="@color/blue"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_10sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contect"
        android:layout_below="@id/backBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/milk"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">

                    <RelativeLayout
                        android:id="@+id/milkService"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/lime_draw">

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/milk_bottle"/>

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/tiffin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp">

                    <RelativeLayout
                        android:id="@+id/tiffinService"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/yellow_draw">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:fontFamily="@font/baloo"
                            android:text="Tiffin Service"
                            android:textColor="@color/bg"
                            android:textSize="@dimen/_18sdp" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/food_img" />

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/painting"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">

                    <RelativeLayout
                        android:id="@+id/paintingService"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/red_draw">

                        <TextView
                            android:id="@+id/paint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Painting &amp; Cleaning"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:fontFamily="@font/baloo"/>


                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/painting_img"/>

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/packers"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">

                    <RelativeLayout
                        android:id="@+id/packerMover"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/black_draw">

                        <TextView
                            android:id="@+id/packer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Packers &amp; Movers"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:fontFamily="@font/baloo"/>


                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/packer_mover"/>

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/repair"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp">

                    <RelativeLayout
                        android:id="@+id/repairService"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/blue_draw">

                        <TextView
                            android:id="@+id/rep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Repair Service"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_18sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:fontFamily="@font/baloo"/>

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/electrician"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="Findro Promise"
                android:textAllCaps="true"
                android:textColor="@color/bg"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/drawIcon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/tiffin" />

            <TextView
                android:id="@+id/servicTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Best-quality foods"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serviceDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/food_servie"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_12ssp" />


            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Lowest Prices"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/low_price"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_security" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Free Cancellation &amp; Reschedule"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/bookNow"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/checked"
                android:tint="@color/bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Top Quality Trusted Partners"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/verified"
                android:textColor="@color/dark_greay"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>